kubernetes/apps/media/immich/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  hostnames:
    - photos.${SECRET_DOMAIN}
  parentRefs:
    - name: external
      namespace: network
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: immich-server
          namespace: media
          port: 2283
# TODO: make only /share/ accessible on external gateway
